--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="wrapper">
         <h1>Hello World</h1>
+        <h2>Just watch it</h2>
     </div>
     <script src="./script.js"></script>
   </body>
