--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="wrapper">
         <h1>Hello World</h1>
         <h2>Just watch it</h2>
+        <p>new filer</p>
+        <span>new one</span>
     </div>
     <script src="./script.js"></script>
   </body>
